--- a/SimpleECS.Demos/imgui.ini
+++ b/SimpleECS.Demos/imgui.ini
@@ -4,16 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
-Size=168,701
+Pos=0,38
+Size=292,682
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Hello, world!]
-Pos=170,557
+Pos=773,477
 Size=1110,163
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][About Dear ImGui]
 Pos=60,60
@@ -21,8 +19,8 @@ Size=570,126
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,0
-Size=1280,720
+Pos=0,19
+Size=1280,701
 Collapsed=0
 
 [Window][Example: Simple layout]
@@ -46,16 +44,46 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Example: Console]
-Pos=308,265
-Size=520,468
+Pos=204,43
+Size=872,256
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][bruh]
+Pos=93,54
+Size=876,512
 Collapsed=0
 
+[Window][Viewport]
+Pos=294,38
+Size=852,460
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=128,430
+Size=623,414
+Collapsed=0
+
+[Window][Example: Log]
+Pos=1148,38
+Size=132,682
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Example: Documents]
+Pos=294,500
+Size=852,220
+Collapsed=0
+DockId=0x0000000A,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1280,701 Split=X
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=168,701 HiddenTabBar=1 Selected=0xE87781F4
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1110,701 Split=Y
-    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1264,536 Split=X
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=740,509 CentralNode=1
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=368,509 HiddenTabBar=1 Selected=0x20E3C5EA
-    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=1264,163 HiddenTabBar=1 Selected=0xD00C9CD4
+DockSpace         ID=0x3BC79352 Pos=0,38 Size=1280,682 Split=Y
+  DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=1280,256
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=1280,424 Split=X HiddenTabBar=1
+    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=0,0 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=852,256 Split=Y Selected=0x13926F0B
+        DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=666,460 CentralNode=1 Selected=0x13926F0B
+        DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=666,220 Selected=0xAE1DCC2C
+      DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=132,256 Selected=0xDBFE1153
+    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=368,509 HiddenTabBar=1 Selected=0x20E3C5EA
 
