--- a/SimpleECS.Library/SimpleECS.vcxproj.filters
+++ b/SimpleECS.Library/SimpleECS.vcxproj.filters
@@ -203,6 +203,12 @@
     <ClCompile Include="src\GUI\GuiManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="\\wsl.localhost\Ubuntu\home\keweihan\Linux Projects\convert_font_to_c\RobotoMedium.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GUI\RobotoMedium.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
