--- a/SimpleECS.Demos/imgui.ini
+++ b/SimpleECS.Demos/imgui.ini
@@ -4,13 +4,12 @@ Size=1280,720
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,0
-Size=288,720
+Pos=926,475
+Size=652,562
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Debug##Default]
-Pos=1003,287
+Pos=666,236
 Size=400,400
 Collapsed=0
 
@@ -31,20 +30,67 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=290,0
-Size=990,720
+Pos=219,0
+Size=860,544
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Dear ImGui Debug Log]
 Pos=60,60
 Size=123,156
 Collapsed=0
 
+[Window][Hierarchy]
+Size=219,720
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Statistics]
+Pos=1081,0
+Size=199,720
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][File Explorer]
+Pos=219,546
+Size=860,174
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=536,714
+Collapsed=0
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=605,136
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][Entities]
+Pos=0,0
+Size=217,720
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Example: Long text display]
+Pos=58,60
+Size=520,600
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X Selected=0x13926F0B
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=910,720 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=288,720 Selected=0xE87781F4
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=990,720 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=368,720 Selected=0x20E3C5EA
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X Selected=0x13926F0B
+  DockNode          ID=0x00000005 Parent=0x8B93E3BD SizeRef=217,720 Selected=0xA628E342
+  DockNode          ID=0x0000000A Parent=0x8B93E3BD SizeRef=1061,720 Split=X
+    DockNode        ID=0x00000001 Parent=0x0000000A SizeRef=219,720 Selected=0x29EABFBD
+    DockNode        ID=0x00000002 Parent=0x0000000A SizeRef=1059,720 Split=X
+      DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=860,720 Split=Y
+        DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1280,544 Split=X
+          DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=910,720 CentralNode=1 Selected=0x13926F0B
+          DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=368,720 Selected=0x20E3C5EA
+        DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1280,174 Selected=0xCAC6E4C7
+      DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=199,720 Selected=0x47E8F9DC
 
