Add Position and Velocity display
- Add implicit bool conversion operator for CHandle (pointer semantics)

--- a/SimpleECS.Demos/Pong.vcxproj.filters
+++ b/SimpleECS.Demos/Pong.vcxproj.filters
@@ -18,7 +18,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="scripts\piCalcMomentum.cpp">
+    <ClCompile Include="scripts\collisionStress.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
