--- a/SimpleECS.Demos/imgui.ini
+++ b/SimpleECS.Demos/imgui.ini
@@ -4,9 +4,10 @@ Size=1280,720
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=926,475
-Size=652,562
+Pos=197,502
+Size=882,218
 Collapsed=0
+DockId=0x00000007,1
 
 [Window][Debug##Default]
 Pos=666,236
@@ -30,8 +31,8 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=219,0
-Size=860,544
+Pos=197,0
+Size=882,500
 Collapsed=0
 DockId=0x00000003,0
 
@@ -52,8 +53,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][File Explorer]
-Pos=219,546
-Size=860,174
+Pos=197,502
+Size=882,218
 Collapsed=0
 DockId=0x00000007,0
 
@@ -72,25 +73,43 @@ Size=200,100
 
 [Window][Entities]
 Pos=0,0
-Size=217,720
+Size=195,720
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000A,0
 
 [Window][Example: Long text display]
 Pos=58,60
 Size=520,600
 Collapsed=0
 
+[Window][Example: Property editor]
+Pos=65,56
+Size=430,450
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,386
+
+[Table][0xD181190E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X Selected=0x13926F0B
-  DockNode          ID=0x00000005 Parent=0x8B93E3BD SizeRef=217,720 Selected=0xA628E342
-  DockNode          ID=0x0000000A Parent=0x8B93E3BD SizeRef=1061,720 Split=X
-    DockNode        ID=0x00000001 Parent=0x0000000A SizeRef=219,720 Selected=0x29EABFBD
-    DockNode        ID=0x00000002 Parent=0x0000000A SizeRef=1059,720 Split=X
-      DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=860,720 Split=Y
-        DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1280,544 Split=X
+  DockNode          ID=0x0000000A Parent=0x8B93E3BD SizeRef=195,720 Selected=0xA628E342
+  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=1083,720 Split=X
+    DockNode        ID=0x00000001 Parent=0x0000000B SizeRef=219,720 Selected=0x29EABFBD
+    DockNode        ID=0x00000002 Parent=0x0000000B SizeRef=1059,720 Split=X
+      DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=881,720 Split=Y
+        DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1280,500 Split=X
           DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=910,720 CentralNode=1 Selected=0x13926F0B
           DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=368,720 Selected=0x20E3C5EA
-        DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1280,174 Selected=0xCAC6E4C7
+        DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1280,218 Selected=0xCAC6E4C7
       DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=199,720 Selected=0x47E8F9DC
 
