--- a/SimpleECS.Demos/imgui.ini
+++ b/SimpleECS.Demos/imgui.ini
@@ -4,10 +4,10 @@ Size=1280,720
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=197,502
-Size=882,218
+Pos=0,362
+Size=207,358
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x0000000E,0
 
 [Window][Debug##Default]
 Pos=666,236
@@ -31,10 +31,10 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=197,0
-Size=882,500
+Pos=209,0
+Size=876,720
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000A,0
 
 [Window][Dear ImGui Debug Log]
 Pos=60,60
@@ -47,16 +47,16 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Statistics]
-Pos=1081,0
-Size=199,720
+Pos=1087,214
+Size=193,270
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000011,0
 
 [Window][File Explorer]
-Pos=197,502
-Size=882,218
+Pos=1093,276
+Size=187,444
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000009,0
 
 [Window][Example: Documents]
 Pos=60,60
@@ -73,9 +73,9 @@ Size=200,100
 
 [Window][Entities]
 Pos=0,0
-Size=195,720
+Size=207,360
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000B,0
 
 [Window][Example: Long text display]
 Pos=58,60
@@ -96,20 +96,81 @@ Collapsed=0
 IsChild=1
 Size=150,386
 
+[Window][Toolbar]
+Size=1280,99
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Example: Log]
+Pos=70,69
+Size=500,400
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Inspector]
+Pos=1087,0
+Size=193,212
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][Freeze Control]
+Pos=1087,486
+Size=193,234
+Collapsed=0
+DockId=0x00000012,0
+
 [Table][0xD181190E,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=44
+Column 1  Width=44
+Column 2  Width=44
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=45
+Column 1  Width=45
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=45
+Column 1  Width=45
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X Selected=0x13926F0B
-  DockNode          ID=0x0000000A Parent=0x8B93E3BD SizeRef=195,720 Selected=0xA628E342
-  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=1083,720 Split=X
-    DockNode        ID=0x00000001 Parent=0x0000000B SizeRef=219,720 Selected=0x29EABFBD
-    DockNode        ID=0x00000002 Parent=0x0000000B SizeRef=1059,720 Split=X
-      DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=881,720 Split=Y
-        DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1280,500 Split=X
-          DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=910,720 CentralNode=1 Selected=0x13926F0B
-          DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=368,720 Selected=0x20E3C5EA
-        DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1280,218 Selected=0xCAC6E4C7
-      DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=199,720 Selected=0x47E8F9DC
+DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X Selected=0x13926F0B
+  DockNode              ID=0x00000007 Parent=0x8B93E3BD SizeRef=1085,720 Split=X
+    DockNode            ID=0x00000008 Parent=0x00000007 SizeRef=914,720 Split=Y
+      DockNode          ID=0x00000005 Parent=0x00000008 SizeRef=1280,99 HiddenTabBar=1 Selected=0x738351EE
+      DockNode          ID=0x0000000C Parent=0x00000008 SizeRef=1280,619 Split=X
+        DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=219,720 Selected=0x29EABFBD
+        DockNode        ID=0x00000002 Parent=0x0000000C SizeRef=1059,720 Split=X
+          DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=910,720 Split=X Selected=0x13926F0B
+            DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=207,720 Split=Y Selected=0xA628E342
+              DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=209,360 Selected=0xA628E342
+              DockNode  ID=0x0000000E Parent=0x00000006 SizeRef=209,358 Selected=0xE87781F4
+            DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=876,720 CentralNode=1 Selected=0x13926F0B
+          DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=368,720 Selected=0x20E3C5EA
+    DockNode            ID=0x00000009 Parent=0x00000007 SizeRef=187,720 Selected=0x47E8F9DC
+  DockNode              ID=0x0000000D Parent=0x8B93E3BD SizeRef=193,720 Split=Y Selected=0xE7039252
+    DockNode            ID=0x0000000F Parent=0x0000000D SizeRef=187,212 Selected=0xE7039252
+    DockNode            ID=0x00000010 Parent=0x0000000D SizeRef=187,506 Split=Y Selected=0x47E8F9DC
+      DockNode          ID=0x00000011 Parent=0x00000010 SizeRef=358,270 Selected=0x47E8F9DC
+      DockNode          ID=0x00000012 Parent=0x00000010 SizeRef=358,234 Selected=0xC79EF644
 
