--- a/SimpleECS.Library/SimpleECS.vcxproj
+++ b/SimpleECS.Library/SimpleECS.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{13591b0a-ec79-4e38-ae27-1a1eaaa1286a}</ProjectGuid>
     <RootNamespace>SimpleECS</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>SimpleECS</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -125,7 +126,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>SIMPLEECS_EXPORTS;_TESTING</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\Projects\SimpleECS\SimpleECS.Library\packages\imgui-1.90.6\backends;E:\Projects\SimpleECS\SimpleECS.Library\packages\imgui-1.90.6;E:\Projects\SimpleECS\SimpleECS.Library\src;C:\Program Files\boost\boost_1_82_0;E:\Projects\SimpleECS\SimpleECS.Library\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Projects\SimpleECS\SimpleECS.Library\packages\imgui-1.90.6\backends;E:\Projects\SimpleECS\SimpleECS.Library\packages\imgui-1.90.6;E:\Projects\SimpleECS\SimpleECS.Library\src;E:\Program Files\boost\boost_1_82_0;E:\Projects\SimpleECS\SimpleECS.Library\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -143,7 +144,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_LIB;SIMPLEECS_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\Projects\SimpleECS\SimpleECS.Library\packages\imgui-1.90.6\backends;E:\Projects\SimpleECS\SimpleECS.Library\packages\imgui-1.90.6;E:\Projects\SimpleECS\SimpleECS.Library\src;C:\Program Files\boost\boost_1_82_0;E:\Projects\SimpleECS\SimpleECS.Library\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Projects\SimpleECS\SimpleECS.Library\packages\imgui-1.90.6\backends;E:\Projects\SimpleECS\SimpleECS.Library\packages\imgui-1.90.6;E:\Projects\SimpleECS\SimpleECS.Library\src;E:\Program Files\boost\boost_1_82_0;E:\Projects\SimpleECS\SimpleECS.Library\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -220,7 +221,6 @@
     <ClCompile Include="src\Render\RectangleRenderer.cpp" />
     <ClCompile Include="src\Core\Scene.cpp" />
     <ClCompile Include="src\Utility\TransformUtil.cpp" />
-    <ClCompile Include="\\wsl.localhost\Ubuntu\home\keweihan\Linux Projects\convert_font_to_c\RobotoMedium.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
