--- a/SimpleECS.Tests/SimpleECS-tests.vcxproj
+++ b/SimpleECS.Tests/SimpleECS-tests.vcxproj
@@ -58,13 +58,13 @@
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>C:\Program Files\boost\boost_1_82_0;E:\Projects\SimpleECS\SimpleECS.Library\src;E:\Projects\SimpleECS\SimpleECS.Library\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Program Files\boost\boost_1_82_0;E:\Projects\SimpleECS\SimpleECS.Library\src;E:\Projects\SimpleECS\SimpleECS.Library\include;</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>E:\Projects\SimpleECS\Debug;$(IntDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>E:\Projects\SimpleECS\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -91,7 +91,7 @@
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>C:\Program Files\boost\boost_1_82_0;E:\Projects\SimpleECS\SimpleECS.Library\src;E:\Projects\SimpleECS\SimpleECS.Library\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Program Files\boost\boost_1_82_0;E:\Projects\SimpleECS\SimpleECS.Library\src;E:\Projects\SimpleECS\SimpleECS.Library\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -103,6 +103,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="testEcsCell.cpp" />
+    <ClCompile Include="testEcsDelete.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SimpleECS\SimpleECS.vcxproj">
