--- a/.github/workflows/run-ctest.yaml
+++ b/.github/workflows/run-ctest.yaml
@@ -99,12 +99,47 @@ jobs:
         run: |
           export CONAN_HOME=/root/.conan2
           echo "## Conan Profile Information" >> $GITHUB_STEP_SUMMARY
+          echo "```" >> $GITHUB_STEP_SUMMARY
           conan profile show >> $GITHUB_STEP_SUMMARY
+          echo "```" >> $GITHUB_STEP_SUMMARY
       
       - name: Run tests
         run: |
           cd build/Release && ctest
   
+  test-performance: 
+    needs: build-linux-images
+    name: Performance Runs
+    container:
+      image: ghcr.io/${{ github.repository_owner }}/build-env-gcc:latest
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+      options: --user root
+          cd build/Release && ctest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Move installed conan dependencies in container to local path
+      - name: Move conan dependencies 
+        run: |
+          mv /workspace/build ./build
+
+      - name: Compiler version
+        run: |
+          gcc --version
+
+      - name: Build test executables
+        run: | # Set default profile to profile in container 
+          export CONAN_HOME=/root/.conan2
+          python3 scripts/helper.py build --type release
+      
+      - name: Run tests
+        run: |
+          ./build/Release/bin/perfCollisionStress >> $GITHUB_STEP_SUMMARY
+    
+
   test-windows:
     name: Test with Windows MSVC
     runs-on: windows-latest  # This specifies a Windows environment
@@ -145,19 +180,5 @@ jobs:
       - name: Run tests
         run: |
           python scripts/helper.py test
-
-      - name: (Dummy) Performance Test
-        id: perf_test
-        run: |
-          # Your performance test command
-          "fps=60" >> $env:GITHUB_OUTPUT
-      
-      - name: (Dummy) Performance Summary
-        shell: pwsh
-        run: |
-          "### Performance Results" >> $env:GITHUB_STEP_SUMMARY
-          "| Metric | Value |" >> $env:GITHUB_STEP_SUMMARY
-          "| --- | --- |" >> $env:GITHUB_STEP_SUMMARY
-          "| FPS | 60 |" >> $env:GITHUB_STEP_SUMMARY
 
 
