--- a/.github/workflows/run-ctest.yaml
+++ b/.github/workflows/run-ctest.yaml
@@ -110,6 +110,7 @@ jobs:
   test-performance: 
     needs: build-linux-images
     name: Performance Runs
+    runs-on: ubuntu-latest
     container:
       image: ghcr.io/${{ github.repository_owner }}/build-env-gcc:latest
       credentials:
