Add OpenMP dependency
Update Dockerfile

Update Dockerfile

Update Dockerfile

Update Dockerfile

Update run-ctest.yaml

Clang attempt

Update conanfile.py

Update Dockerfile

Update conanfile.py

Fix Clang OpenMP

Fix CI

--- a/.github/docker/clang/Dockerfile
+++ b/.github/docker/clang/Dockerfile
@@ -1,9 +1,6 @@
 FROM ubuntu:22.04
-
 ENV DEBIAN_FRONTEND=noninteractive
-
 USER root
-
 WORKDIR /workspace
 
 # Download system dependencies
@@ -16,6 +13,10 @@ RUN apt-get update && apt-get install -y \
     lsb-release \
     software-properties-common \
     gnupg \
+    libomp-dev \
+    libomp5 \
+    libclang-dev \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 # Install clang 16
@@ -25,25 +26,26 @@ RUN wget https://apt.llvm.org/llvm.sh && \
     rm llvm.sh
 
 RUN clang-16 --version
-
 RUN ln -s /usr/bin/clang-16 /usr/bin/clang && \
     ln -s /usr/bin/clang++-16 /usr/bin/clang++
 
+# Create symbolic links for OpenMP
+RUN ln -s /usr/lib/x86_64-linux-gnu/libomp.so.5 /usr/lib/libomp.so && \
+    ln -s /usr/lib/x86_64-linux-gnu/libomp.so.5 /usr/lib/x86_64-linux-gnu/libomp.so
+
 COPY conanfile.py /workspace/conanfile.py
-
 RUN mkdir -p /root/.conan2
-
 RUN pip install conan
 
+# Set compiler and OpenMP flags
 ENV CC=clang-16
 ENV CXX=clang++-16
+ENV CFLAGS="-Wno-strict-prototypes -fopenmp"
+ENV CXXFLAGS="-fopenmp"
+ENV LDFLAGS="-fopenmp"
+ENV LD_LIBRARY_PATH="/usr/lib/llvm-16/lib:${LD_LIBRARY_PATH}"
+
 RUN conan profile detect
-
-RUN apt-get update && apt-get install -y build-essential
-
-# Supress pulseaudio erroneous error
-ENV CFLAGS="-Wno-strict-prototypes"
-
 RUN conan install . --output-folder=. --build=missing -s build_type=Release -c tools.system.package_manager:mode=install
 
 CMD ["bash"]
