Add manual trigger
Delete run-ctest-manual.yaml

Update run-ctest.yaml

Update run-ctest-manual.yaml

Create run-ctest-manual.yaml

Update run-ctest.yaml

--- a/.github/workflows/run-ctest.yaml
+++ b/.github/workflows/run-ctest.yaml
@@ -1,6 +1,7 @@
 name: CI Pipeline
 
 on:
+  workflow_dispatch:
   push:
       branches:
       - dev
@@ -140,7 +141,6 @@ jobs:
   test-windows:
     name: Test with Windows MSVC
     runs-on: windows-latest  # This specifies a Windows environment
-    cancel-in-progress: true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
